--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <div>
+            <div>
+                <!-- ADD SOCIAL MEDIA SVG INSTA & FACEBOOK -->
+            </div>
+            <div>
+                <!-- <img src="" alt=""> ADD LOGO -->
+                <h4>Contact Us</h4>
+                <ul>
+                    <li>North America: <a href="#">+1-877-334-9468</a></li>
+                    <li>Outside of North Am: <a href="#">+1-647-478-9464</a></li>
+                    <li>Local Toronto and GTA: <a href="#">+1-647-478-9464</a></li>
+                    <li><a href="#">inquiry@torontocupcake.com</a></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <ul>
+                <li>Privacy Policy</li>
+                <li>Return Policy</li>
+                <li>Terms of Service</li>
+                <li>Shipping Policy</li>
+            </ul>
+            <p>Copyright <span>&copy</span> 2022</p>
+        </div>   
+    </footer>
 </body>
 </html>
