--- a/about.html
+++ b/about.html
@@ -13,7 +13,27 @@
 </head>
 <body>
     <header>
-
+        <div class="container">
+            <div class="announcements">
+                <p>Covid restrictions</p>
+            </div>
+            <div class="nav-desktop">
+                <nav>
+                    <a href="#" class="hamburger"><i class="fa fa-bars"></i></a>    
+                    <img src="images/logo.png" alt="toronto cupcake logo" class="nav-logo">
+                    <ul>
+                        <!--changed class to .current to style of current active li-->
+                        <li class="home"><a href="#" class="current">Home</a></li>
+                        <li class="about"><a href="#">About</a></li>
+                        <li class="cupcakes"><a href="#">Cupcakes</a></li>
+                        <li class="faqs"><a href="#">FAQs</a></li>
+                        <li class="contact"><a href="#">Contact</a></li>
+                        <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
+                        <li class="cart"><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
 
@@ -21,10 +41,20 @@
     <footer>
         <div>
             <div>
-                <!-- ADD SOCIAL MEDIA SVG INSTA & FACEBOOK -->
+                <a href="#" class="fa fa-instagram"></a>
+                <svg id="Ebene_1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="20px" viewBox="0 0 1024 1024">
+                    <defs>
+                        <style>
+                            .cls-1 {
+                                fill:#fff;
+                            }
+                        </style>
+                    </defs>
+                    <path class="cls-1" d="M1024,512C1024,229.23,794.77,0,512,0S0,229.23,0,512c0,255.55,187.23,467.37,432,505.78V660H302V512H432V399.2C432,270.88,508.44,200,625.39,200c56,0,114.61,10,114.61,10V336H675.44c-63.6,0-83.44,39.47-83.44,80v96H734L711.3,660H592v357.78C836.77,979.37,1024,767.55,1024,512Z"/>
+                </svg>
             </div>
             <div>
-               <!-- <img src="" alt=""> ADD LOGO -->
+                <img src="images/logo.png" alt="toronto cupcake logo" class="footer-logo">
                 <h4>Contact Us</h4>
                 <ul>
                     <li>North America: <a href="#">+1-877-334-9468</a></li>
