--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Orelega+One&family=Poppins:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About Us</title>
 </head>
 <body>
@@ -17,17 +18,17 @@
             <div class="announcements">
                 <p>Covid restrictions</p>
             </div>
-            <div class="nav-desktop">
+            <div class="nav-container">
                 <nav>
                     <a href="#" class="hamburger"><i class="fa fa-bars"></i></a>    
-                    <img src="images/logo.png" alt="toronto cupcake logo" class="nav-logo">
-                    <ul>
-                        <!--changed class to .current to style of current active li-->
-                        <li class="home"><a href="#" class="current">Home</a></li>
-                        <li class="about"><a href="#">About</a></li>
-                        <li class="cupcakes"><a href="#">Cupcakes</a></li>
-                        <li class="faqs"><a href="#">FAQs</a></li>
-                        <li class="contact"><a href="#">Contact</a></li>
+                    <img src="images/logo.png" alt="toronto cupcake logo" class="nav-logo hide-mobile">
+                    <ul class="nav-ul">
+                        <!--changed class to .current to style of current active li / gave class 'hide-' so the elements could be hidden on mobile/desktop-->
+                        <li class="home hide-mobile"><a href="#" class="current">Home</a></li>
+                        <li class="about hide-mobile"><a href="#">About</a></li>
+                        <li class="cupcakes hide-mobile"><a href="#">Cupcakes</a></li>
+                        <li class="faqs hide-mobile"><a href="#">FAQs</a></li>
+                        <li class="contact hide-mobile"><a href="#">Contact</a></li>
                         <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
                         <li class="cart"><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
@@ -40,9 +41,20 @@
     </main>
     <footer>
         <div>
-            <div>
-                <a href="#" class="fa fa-instagram"></a>
-                <svg id="Ebene_1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="20px" viewBox="0 0 1024 1024">
+            <div class="social-media">
+                <svg id="logo-insta" xmlns="http://www.w3.org/2000/svg" width="20px" viewBox="0 0 512 512" class="logo-insta">
+                    <defs>
+                        <style>
+                            .cls-1 {
+                                fill:#fff;
+                            }
+                        </style>
+                    </defs>
+                    <path class="cls-1" d="M256,49.47c67.27,0,75.23.26,101.8,1.47,24.56,1.12,37.9,5.22,46.78,8.67a78,78,0,0,1,29,18.85,78,78,0,0,1,18.85,29c3.45,8.88,7.55,22.22,8.67,46.78,1.21,26.57,1.47,34.53,1.47,101.8s-.26,75.23-1.47,101.8c-1.12,24.56-5.22,37.9-8.67,46.78a83.51,83.51,0,0,1-47.81,47.81c-8.88,3.45-22.22,7.55-46.78,8.67-26.56,1.21-34.53,1.47-101.8,1.47s-75.24-.26-101.8-1.47c-24.56-1.12-37.9-5.22-46.78-8.67a78,78,0,0,1-29-18.85,78,78,0,0,1-18.85-29c-3.45-8.88-7.55-22.22-8.67-46.78-1.21-26.57-1.47-34.53-1.47-101.8s.26-75.23,1.47-101.8c1.12-24.56,5.22-37.9,8.67-46.78a78,78,0,0,1,18.85-29,78,78,0,0,1,29-18.85c8.88-3.45,22.22-7.55,46.78-8.67,26.57-1.21,34.53-1.47,101.8-1.47m0-45.39c-68.42,0-77,.29-103.87,1.52S107,11.08,91,17.3A123.68,123.68,0,0,0,46.36,46.36,123.68,123.68,0,0,0,17.3,91c-6.22,16-10.48,34.34-11.7,61.15S4.08,187.58,4.08,256s.29,77,1.52,103.87S11.08,405,17.3,421a123.68,123.68,0,0,0,29.06,44.62A123.52,123.52,0,0,0,91,494.69c16,6.23,34.34,10.49,61.15,11.71s35.45,1.52,103.87,1.52,77-.29,103.87-1.52S405,500.92,421,494.69A128.74,128.74,0,0,0,494.69,421c6.23-16,10.49-34.34,11.71-61.15s1.52-35.45,1.52-103.87-.29-77-1.52-103.87S500.92,107,494.69,91a123.52,123.52,0,0,0-29.05-44.62A123.68,123.68,0,0,0,421,17.3c-16-6.22-34.34-10.48-61.15-11.7S324.42,4.08,256,4.08Z"/>
+                    <path class="cls-1" d="M256,126.64A129.36,129.36,0,1,0,385.36,256,129.35,129.35,0,0,0,256,126.64ZM256,340a84,84,0,1,1,84-84A84,84,0,0,1,256,340Z"/>
+                    <circle class="cls-1" cx="390.48" cy="121.52" r="30.23"/>
+                </svg>
+                <svg id="logo-facebook" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" width="20px" viewBox="0 0 1024 1024">
                     <defs>
                         <style>
                             .cls-1 {
@@ -53,8 +65,8 @@
                     <path class="cls-1" d="M1024,512C1024,229.23,794.77,0,512,0S0,229.23,0,512c0,255.55,187.23,467.37,432,505.78V660H302V512H432V399.2C432,270.88,508.44,200,625.39,200c56,0,114.61,10,114.61,10V336H675.44c-63.6,0-83.44,39.47-83.44,80v96H734L711.3,660H592v357.78C836.77,979.37,1024,767.55,1024,512Z"/>
                 </svg>
             </div>
-            <div>
-                <img src="images/logo.png" alt="toronto cupcake logo" class="footer-logo">
+            <div class="footer-contact">
+                <img src="images/logo.png" alt="toronto cupcake logo" class="footer-logo hide-desktop">
                 <h4>Contact Us</h4>
                 <ul>
                     <li>North America: <a href="#">+1-877-334-9468</a></li>
@@ -64,15 +76,16 @@
                 </ul>
             </div>
         </div>
-        <div>
+        <div class="footer-policy">
             <ul>
-                <li>Privacy Policy</li>
-                <li>Return Policy</li>
-                <li>Terms of Service</li>
-                <li>Shipping Policy</li>
+                <li><a href="#" class="policy">Privacy Policy</a></li>
+                <li><a href="#" class="policy">Return Policy</a></li>
+                <li><a href="#" class="policy">Terms of Service</a></li>
+                <li><a href="#" class="policy">Shipping Policy</a></li>
             </ul>
-            <p>Copyright <span>&copy</span> 2022</p>
-        </div>   
+            <p class="copyright">Copyright <span>&copy</span> 2022</p>
+        </div> 
+    </footer>
     </footer>
 </body>
 </html>
