--- a/about.html
+++ b/about.html
@@ -37,7 +37,43 @@
         </div>
     </header>
     <main>
-
+        <div class="container">
+            <h1>About Us</h1>
+            <section class="about-container">
+                <div class="about-img">
+                    <!--Add image-->
+                </div>
+                <div class="about-txt">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Id venenatis a condimentum vitae sapien. Viverra vitae congue eu consequat ac felis donec. Proin fermentum leo vel orci. Aliquet risus feugiat in ante metus dictum at tempor. Id aliquet risus feugiat in ante metus dictum at tempor. Lorem dolor sed viverra ipsum nunc aliquet. Porttitor eget dolor morbi non arcu risus quis. Lectus quam id leo in vitae. Lectus proin nibh nisl condimentum id venenatis. Lobortis scelerisque fermentum dui faucibus in ornare.</p>
+                    <p>Ut tortor pretium viverra suspendisse potenti nullam ac tortor vitae. Nisi lacus sed viverra tellus. Elementum tempus egestas sed sed. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Pellentesque habitant morbi tristique senectus et. Congue eu consequat ac felis donec et. Duis ut diam quam nulla porttitor massa id. Ultricies leo integer malesuada nunc vel risus commodo. Id eu nisl nunc mi. Risus nullam eget felis eget nunc lobortis mattis aliquam. Mattis molestie a iaculis at. Elementum nibh tellus molestie nunc non blandit. Dui accumsan sit amet nulla facilisi.</p>
+                    <p>Eu scelerisque felis imperdiet proin fermentum leo vel orci porta. Id diam vel quam elementum pulvinar etiam non quam lacus. In egestas erat imperdiet sed euismod nisi porta. Condimentum id venenatis a condimentum vitae sapien pellentesque. Mi eget mauris pharetra et ultrices neque. Tellus orci ac auctor augue mauris augue neque. Faucibus nisl tincidunt eget nullam.</p>
+                </div>
+            </section>
+            <div class="container-about-extra">
+                <section class="community">
+                    <div class="community-img">
+                        <!--DO THE IMAGE RESPIONSIVE THINGIE-->
+                        <img src="images/olivia-herlambang-tham-8lDEn_W-WAA-unsplash.jpg" alt="" width="181px">
+                    </div>
+                    <div class="community-txt">
+                        <h2>Community</h2>
+                        <p class="hide-mobile">Lorem ipsum dolor sit amet, consectetur adipisifwcing elit, sed do eiusmod tempor incididunt ut labore et dolore roipi magna aliqua. Ut enim ad minim veeniam, quis nostruklad exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in tufpoy voluptate velit esse cillum dolore eu fugiat nulla parieratur. Excepteur sint occaecat cupidatat.</p>
+                        <button type="button" class="button">Learn More <span>&gt;</span></button>
+                    </div>
+                </section>
+                <section class="resources-and-partnerships">
+                    <div class="rnp-img">
+                        <!--DO THE IMAGE RESPIONSIVE THINGIE-->
+                        <img src="images/ibrahim-boran-aoGA9N8QNrI-unsplash.jpg" alt="" width="181px">
+                    </div>
+                    <div class="rnp-txt">
+                        <h2>Resources and partnerships</h2>
+                        <p class="hide-mobile">Lorem ipsum dolor sit amet, consectetur adipisifwcing elit, sed do eiusmod tempor incididunt ut labore et dolore roipi magna aliqua. Ut enim ad minim veeniam, quis nostruklad exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in tufpoy voluptate velit esse cillum dolore eu fugiat nulla parieratur. Excepteur sint occaecat cupidatat.</p>
+                        <button type="button" class="button">Learn More <span>&gt;</span></button>
+                    </div>
+                </section>
+            </div>
+        </div>
     </main>
     <footer>
         <div>
@@ -85,7 +121,6 @@
             </ul>
             <p class="copyright">Copyright <span>&copy</span> 2022</p>
         </div> 
-    </footer>
     </footer>
 </body>
 </html>
