--- a/faqs.html
+++ b/faqs.html
@@ -37,7 +37,37 @@
         </div>
     </header>
     <main>
-
+        <div class="container">
+            <h1>FAQs</h1>
+            <div class="faqs-container">
+                <div class="faqs-txt">
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus elit, tristique accumsan mauris nec, rutrum imperdiet ligula. Nulla sit amet nisl eu erat auctor sagittis.</p>
+                    <h2>Lorem ipsum dolor sit amet?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus elit, tristique accumsan mauris nec, rutrum imperdiet ligula. Nulla sit amet nisl eu erat auctor sagittis vel quis neque. Nullam ultrices ullamcorper massa, at feugiat nunc rutrum eget.</p>
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus elit, tristique accumsan mauris nec, rutrum imperdiet ligula. Nulla sit amet nisl eu erat auctor sagittis.</p>
+                    <h2>Lorem ipsum dolor sit amet?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus elit, tristique accumsan mauris nec, rutrum imperdiet ligula. Nulla sit amet nisl eu erat auctor sagittis vel quis neque. Nullam ultrices ullamcorper massa, at feugiat nunc rutrum eget.</p>
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tellus elit, tristique accumsan mauris nec, rutrum imperdiet ligula. Nulla sit amet nisl eu erat auctor sagittis.</p>
+                </div>
+                <div class="faqs-form">
+                    <h2>Can't find an answer for your question?
+                        <br>
+                        Leave us a message:</h2>
+                    <form action="#" method="post">
+                        <label for="name">Name</label>
+                        <input id="name" type="text" name="name" class="full" required>
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" class="full" required>
+                        <label for="message">Message</label>
+                        <input id="message" type="text" name="message" class="message">
+                        <input class="button" id="button" type="button" value="Send">
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div>
