--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                 <li><a href="#" class="policy">Terms of Service</a></li>
                 <li><a href="#" class="policy">Shipping Policy</a></li>
             </ul>
-            <p class="copyright">Copyright <span>&copy</span> 2022</p>
+            <p class="copyright">Copyright <span>&copy;</span> 2022</p>
         </div> 
     </footer>
 </body>
