--- a/faqs.html
+++ b/faqs.html
@@ -115,9 +115,8 @@
                 <li><a href="#" class="policy">Terms of Service</a></li>
                 <li><a href="#" class="policy">Shipping Policy</a></li>
             </ul>
-            <p class="copyright">Copyright <span>&copy</span> 2022</p>
+            <p class="copyright">Copyright <span>&copy;</span> 2022</p>
         </div> 
-    </footer>
     </footer>
 </body>
 </html>
